--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 
 
-<li aria-haspopup="true">
+<li aria-haspopup="true">  <!-- I do not recognize this-->
     <ul class="collection-nav--child">
 
       <li class="collection-nav--child-link"><h5><a href="/collections/all">All Collections</a></h5>
@@ -97,7 +97,7 @@
 
 
 
-<li aria-haspopup="true">
+<li aria-haspopup="true"> <!-- I do not recognize this-->
     <ul class="collection-nav--child">
 
       <li class="collection-nav--child-link"><h5><a href="/collections/fabric-by-the-yard">Fabric</a></h5>
@@ -141,7 +141,7 @@
 
 
 
-<li aria-haspopup="true">
+<li aria-haspopup="true"> <!-- I do not recognize this-->
     <ul class="collection-nav--child">
 
       <li class="collection-nav--child-link"><h5><a href="/collections/wallpapers">Wallpaper</a></h5>
